[gd_scene load_steps=5 format=3 uid="uid://d3rnfqqbp656p"]

[ext_resource type="Script" path="res://src/bresk_rules.gd" id="1_73wqb"]
[ext_resource type="Texture2D" uid="uid://x34iv8m58u04" path="res://images/possiblemenuphoto1.png" id="2_0n370"]
[ext_resource type="Texture2D" uid="uid://c5hbf8lmjy46g" path="res://images/breskrules1.png" id="3_kyait"]
[ext_resource type="FontFile" uid="uid://banhyri0k0kbh" path="res://Noto_Sans_JP/static/NotoSansJP-Bold.ttf" id="3_qq1rk"]

[node name="BreskRules2" type="Control"]
layout_mode = 3
anchor_left = -0.073
anchor_right = 0.592
anchor_bottom = 0.656
offset_left = -0.839981
offset_right = 0.359985
offset_bottom = 0.519958
script = ExtResource("1_73wqb")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.588235)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.112
anchor_right = 1.613
anchor_bottom = 1.516
offset_left = -0.136002
offset_top = 3.0
offset_right = 0.585938
offset_bottom = 0.156006
texture = ExtResource("2_0n370")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color(0.00392157, 0.00392157, 0.00392157, 1)
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.72
anchor_top = 0.056
anchor_right = 1.06
anchor_bottom = 0.157
offset_left = -0.160034
offset_top = 0.295998
offset_right = 0.319946
offset_bottom = -0.313004
theme_override_fonts/normal_font = ExtResource("3_qq1rk")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "REGLAS DE BRESK"
scroll_active = false

[node name="BackMenuButton2" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.177
anchor_top = 0.102
anchor_right = 0.427
anchor_bottom = 0.217
offset_left = -0.206009
offset_top = -0.318001
offset_right = 0.294006
offset_bottom = 0.146988
theme_override_font_sizes/font_size = 35
text = "VOLVER A MENU"

[node name="Breskrules1" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.49
anchor_top = 0.245
anchor_right = 1.258
anchor_bottom = 1.436
offset_left = -0.220032
offset_top = -26.705
offset_right = -128.724
offset_bottom = 37.8759
scale = Vector2(1.1504, 0.958205)
texture = ExtResource("3_kyait")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.221
anchor_top = 1.209
anchor_right = 0.399
anchor_bottom = 1.354
offset_left = 0.561981
offset_top = -0.181091
offset_right = 0.0779724
offset_bottom = 0.013916
theme_override_font_sizes/font_size = 28
text = "ATR√ÅS"

[node name="NextButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.324
anchor_top = 1.217
anchor_right = 1.541
anchor_bottom = 1.361
offset_left = -0.0721436
offset_top = 0.146973
offset_right = -0.398193
offset_bottom = 0.0509644
theme_override_font_sizes/font_size = 28
text = "SIGUIENTE"

[connection signal="pressed" from="BackMenuButton2" to="." method="_on_back_menu1_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button2_pressed"]
