[gd_scene load_steps=5 format=3 uid="uid://bsipa8eavughi"]

[ext_resource type="Script" path="res://src/bresk_rules.gd" id="1_d8ceo"]
[ext_resource type="Texture2D" uid="uid://x34iv8m58u04" path="res://images/possiblemenuphoto1.png" id="2_fxn8k"]
[ext_resource type="FontFile" uid="uid://banhyri0k0kbh" path="res://Noto_Sans_JP/static/NotoSansJP-Bold.ttf" id="3_hd4rd"]
[ext_resource type="Texture2D" uid="uid://eouf2aquhfv5" path="res://images/breskrules4.png" id="3_y2pu1"]

[node name="BreskRules4" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_right = -3.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d8ceo")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.588235)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.002
anchor_right = 1.001
anchor_bottom = 1.003
offset_left = -0.174
offset_right = 0.0869141
offset_bottom = -0.224976
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fxn8k")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color(0.00392157, 0.00392157, 0.00392157, 1)
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.42
anchor_top = 0.068
anchor_right = 0.652
anchor_bottom = 0.129
offset_left = -0.460022
offset_top = -0.100006
offset_right = 0.723999
offset_bottom = 0.324997
theme_override_fonts/normal_font = ExtResource("3_hd4rd")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "REGLAS DE BRESK"
scroll_active = false

[node name="BackMenuButton4" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.022
anchor_top = 0.048
anchor_right = 0.183
anchor_bottom = 0.163
offset_left = -0.0860023
offset_top = 0.399998
offset_right = -0.0790405
offset_bottom = -0.225006
theme_override_font_sizes/font_size = 35
text = "VOLVER A MENU"

[node name="Breskrules4" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.237
anchor_top = 0.17
anchor_right = 0.753
anchor_bottom = 0.951
offset_left = 0.618988
offset_top = 0.25
offset_right = 86.511
offset_bottom = 61.675
scale = Vector2(0.919842, 0.931962)
texture = ExtResource("3_y2pu1")

[node name="BackButtonRules4" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.841
anchor_right = 0.165
anchor_bottom = 0.937
offset_left = 4.61
offset_top = -0.0750122
offset_right = 0.35498
offset_bottom = -0.275024
theme_override_font_sizes/font_size = 35
text = "ATR√ÅS"

[node name="NextButtonRules4" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.801
anchor_top = 0.835
anchor_right = 0.944
anchor_bottom = 0.935
offset_left = 0.68689
offset_top = 0.374939
offset_right = 0.12793
offset_bottom = -0.125061
theme_override_font_sizes/font_size = 35
text = "SIGUIENTE"

[connection signal="pressed" from="BackMenuButton4" to="." method="_on_back_menu1_button_pressed"]
[connection signal="pressed" from="BackButtonRules4" to="." method="_on_back_button_rules_4_pressed"]
[connection signal="pressed" from="NextButtonRules4" to="." method="_on_next_button_rules_4_pressed"]
