[gd_scene load_steps=5 format=3 uid="uid://qepkvpanwolg"]

[ext_resource type="Script" path="res://src/bresk_rules.gd" id="1_ajgau"]
[ext_resource type="Texture2D" uid="uid://x34iv8m58u04" path="res://images/possiblemenuphoto1.png" id="2_k18k2"]
[ext_resource type="FontFile" uid="uid://banhyri0k0kbh" path="res://Noto_Sans_JP/static/NotoSansJP-Bold.ttf" id="3_h6uc5"]
[ext_resource type="Texture2D" uid="uid://cpe7pm0icxmag" path="res://images/breskrules5.png" id="3_wh3sr"]

[node name="BreskRules5" type="Control"]
layout_mode = 3
anchor_right = 1.002
anchor_bottom = 1.0
offset_left = 6.0
offset_right = 5.15979
offset_bottom = -3.0
script = ExtResource("1_ajgau")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.588235)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.003
anchor_right = 1.0
anchor_bottom = 1.005
offset_left = 0.768999
offset_top = 2.0
offset_right = 2.00024
offset_bottom = -0.38501
texture = ExtResource("2_k18k2")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color(0.00392157, 0.00392157, 0.00392157, 1)
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.403
anchor_top = 0.059
anchor_right = 0.683
anchor_bottom = 0.139
offset_left = -0.954041
offset_top = 0.456997
offset_right = 0.00598145
offset_bottom = 0.296982
theme_override_fonts/normal_font = ExtResource("3_h6uc5")
theme_override_font_sizes/normal_font_size = 45
bbcode_enabled = true
text = "REGLAS DE BRESK"
scroll_active = false

[node name="BackMenuButton5" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.033
anchor_top = 0.048
anchor_right = 0.206
anchor_bottom = 0.171
offset_left = -0.293999
offset_top = 0.304001
offset_right = 0.891968
offset_bottom = -0.167007
theme_override_font_sizes/font_size = 35
text = "VOLVER A MENU"

[node name="Breskrules5" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.262
anchor_top = 0.182
anchor_right = 0.831
anchor_bottom = 0.966
offset_left = 0.174011
offset_top = -0.0139923
offset_right = -303.013
offset_bottom = -223.382
scale = Vector2(1.3829, 1.35921)
texture = ExtResource("3_wh3sr")

[node name="BackButtonRules5" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.039
anchor_top = 0.858
anchor_right = 0.186
anchor_bottom = 0.961
offset_left = -0.802002
offset_top = -0.06604
offset_right = 0.251984
offset_bottom = 0.00292969
theme_override_font_sizes/font_size = 38
text = "ATR√ÅS"

[connection signal="pressed" from="BackMenuButton5" to="." method="_on_back_menu1_button_pressed"]
[connection signal="pressed" from="BackButtonRules5" to="." method="_on_back_button_rules_5_pressed"]
