extends Control

func _on_back_menu1_button_pressed():
	SceneManager.no_effect_change_scene("InitialMenu")


func _on_next_button1_pressed():
	SceneManager.no_effect_change_scene("BreskRules2")

func _on_back_button_pressed():
	SceneManager.no_effect_change_scene("BreskRules")


func _on_back_button_rules_3_pressed():
	SceneManager.no_effect_change_scene("BreskRules2")


func _on_next_button2_pressed():
	SceneManager.no_effect_change_scene("BreskRules3")
	pass # Replace with function body.


func _on_back_button_rules_4_pressed():
	SceneManager.no_effect_change_scene("BreskRules3")
	pass # Replace with function body.


func _on_next_button_rules_3_pressed():
	SceneManager.no_effect_change_scene("BreskRules4")
	pass # Replace with function body.


func _on_back_button_rules_5_pressed():
	SceneManager.no_effect_change_scene("BreskRules4")
	pass # Replace with function body.


func _on_next_button_rules_4_pressed():
	SceneManager.no_effect_change_scene("BreskRules5")
	pass # Replace with function body.
